#Create a standard Cargo.toml file for a lib named "Ripgendeno"
[package]
name = "ripgendeno"
version = "0.1.0"
authors = ["Ripgendeno"]
edition = "2018"

[lib]
name = "ripgendeno"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ripgen_lib = {version = "0.1.4", features = ["dnsgen"]}
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"